continue on production_natures nomen.

--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -116,6 +116,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -143,6 +144,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -338,6 +340,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -365,6 +368,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -560,6 +564,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -587,6 +592,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -1041,6 +1047,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -1068,6 +1075,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -1333,6 +1341,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -1360,6 +1369,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -1755,6 +1765,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -1782,6 +1793,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -2081,6 +2093,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -2108,6 +2121,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -2303,6 +2317,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -2330,6 +2345,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -2666,6 +2682,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -2693,6 +2710,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -2888,6 +2906,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -2915,6 +2934,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -3157,6 +3177,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -3184,6 +3205,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -3379,6 +3401,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -3406,6 +3429,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -3761,6 +3785,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -3788,6 +3813,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -3982,6 +4008,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -4009,6 +4036,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -4204,6 +4232,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -4231,6 +4260,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -4515,6 +4545,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -4542,6 +4573,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -4813,6 +4845,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -4840,6 +4873,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -5067,6 +5101,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -5094,6 +5129,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -5288,6 +5324,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -5315,6 +5352,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
@@ -5599,6 +5637,7 @@ fra:
         galibier: "Galibier"
         gallus: "Galinacée"
         gas: "Essence"
+        glycine: "Glycine"
         grain: "Grain"
         granite_arena_soil: "Sol sur arène granitique"
         grass: "Herbe"
@@ -5626,6 +5665,7 @@ fra:
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
         liliaceae: "Liliaceae"
