--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1643,6 +1643,8 @@ eng:
         # aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         # baler: "Botteleuse"
         # barley_grain: "Grain d’orge"
+        # bean_crop: "Culture de haricot"
+        # beet_crop: "Culture de betterave"
         # black_valley_land_parcel: "Parcelle de terre noire de vallées"
         # brassicaceae_fungicide: "Fongicide colza"
         # building: "Bâtiment"
@@ -1727,12 +1729,14 @@ eng:
         # hen_manure: "Fumier de poule"
         # hen_slurry: "Lisier de poule"
         # horse_manure: "Fumier de cheval"
+        # horsebean_crop: "Culture de féverolle"
         # hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
         # land_parcel_cluster: "Îlot"
+        # lentil_crop: "Culture de lentille"
         # male_adult_cow: "Taureau"
         # male_young_cow: "Taurillon"
         # manager: "Responsable"
@@ -1765,7 +1769,9 @@ eng:
         # plum_crop: "Verger de pruniers"
         # poacea_herbicide: "Herbicide graminées"
         # poaceae_fungicide: "Fongicide céréales"
+        # potato_crop: "Culture de pomme de terre"
         # rabbit_manure: "Fumier de lapin"
+        # rape_crop: "Culture de colza"
         # reaper: "Moissonneuse-batteuse"
         # red_chesnut_land_parcel: "Parcelle de terres rouges à chataigniers"
         # riflexine: "Riflexine"
@@ -1785,6 +1791,7 @@ eng:
         # sorghum_crop: "Culture de sorgho"
         # sorghum_seed_25: "Semence de sorgho sac de 25kg"
         # sower: "Semoir"
+        # soy_crop: "Culture de soja"
         # spelt_seed_25: "Semence d’épeautre sac de 25kg"
         # spelt_wheat_crop: "Culture d’épeautre"
         # sprayer: "Pulvérisateur"
@@ -1946,18 +1953,23 @@ eng:
         animal_global_documentation: "Animal global documentation" #?
         # annual_frost_fallow_land: "Gel annuel"
         # asparagus: "Asperge"
+        # bean: "Haricot"
+        # beet: "Betterave"
         # calf: "Veau"
         # carrot: "Carotte"
         # escourgeon_barley: "Orge escourgeon"
         feeding: "Feeding" #?
         # garlic: "Ail"
         # grain_corn: "Maïs grain"
+        # horsebean: "Féverolle"
         identification: "Identification" #?
         land_parcel_management: "Land parcel management" #?
+        # lentil: "Lentille"
         marketing: "Marketing" #?
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
         # permanent_meadow: "Prairie permanente"
+        # potato: "Pomme de terre"
         production: "Production" #?
         reproduction: "Reproduction" #?
         # rye: "Seigle"
@@ -1965,8 +1977,11 @@ eng:
         # seed_corn: "Maïs semence"
         # silage_corn: "Maïs ensilage"
         # sorghum: "Sorgho"
+        # soy: "Soja"
         # spring_barley: "Orge de printemps"
         # spring_oat: "Avoine de printemps"
+        # spring_pea: "Pois de printemps"
+        # spring_rapeseed: "Colza de printemps"
         stock_management: "Stock management" #?
         # strawberry: "Fraise"
         # sunflower: "Tournesol"
@@ -1982,6 +1997,8 @@ eng:
         # winter_barley: "Orge d'hiver"
         # winter_hard_wheat: "Blé dur d’hiver"
         # winter_oat: "Avoine d'hiver"
+        # winter_pea: "Pois d'hiver"
+        # winter_rapeseed: "Colza d'hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       name: "Name"
@@ -2209,6 +2226,7 @@ eng:
         # galibier: "Galibier"
         # gallus: "Galinacée"
         # gas: "Essence"
+        # glycine: "Glycine"
         # grain: "Grain"
         # granite_arena_soil: "Sol sur arène granitique"
         # grass: "Herbe"
@@ -2236,6 +2254,7 @@ eng:
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
         # land_parcel_group: "Groupe de parcelles physiques"
+        # lens: "Lentille"
         # lepus: "Lagomorphe"
         # levis: "Levis"
         # liliaceae: "Liliaceae"
